--- a/css/index.css
+++ b/css/index.css
@@ -33,23 +33,12 @@ hr {
   color: white;
 }
 
-.navbar .navbar-item {
-  color: #e4e2ff;
-}
+.vertical-center {
+  min-height: 95%;
+  min-height: 95vh;
 
-.navbar .navbar-item.is-active {
-  color: #e4e2ff;
-  font-weight: 700;
-}
-
-.navbar .navbar-item:hover {
-  background: transparent;
-  color: white;
-}
-
-.navbar .navbar-item a {
-  margin-left: 1rem;
-  color: #e4e2ff;
+  display: flex;
+  align-items: center;
 }
 
 .blog-posts {
@@ -88,10 +77,49 @@ hr {
 }
     ::-webkit-scrollbar{height:10px;width:10px}::-webkit-scrollbar-track{background:#efefef;border-radius:6px}::-webkit-scrollbar-thumb{background:#d5d5d5;border-radius:6px}::-webkit-scrollbar-thumb:hover{background:#c4c4c4}
 
-.vertical-center {
-  min-height: 95%;
-  min-height: 95vh;
-
+.roundedbottom {
+  height: 80px;
+  background: rgb(20, 20, 20);
+  color: rgb(220, 220, 220);
+  padding: 0 2rem 0 2rem;
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  position: sticky;
+  bottom: 2rem;
+  border-radius: 40px;
+  width: calc((24px + 5rem) * 7);
+}
+
+.bottomitem {
+  display: flex;
+  width: auto;
+  margin: auto;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.bottomitem a {
+  text-decoration: none;
+  color: white;
+  padding: 0 2rem;
+}
+
+.roundedbottom a:hover {
+  width: auto;
+  text-decoration: underline;
+  border-radius: 40px;
+  background-color: rgb(180, 180, 180);
+  display:block;
+  position:sticky;
+  padding: 25px 2rem 25px 2rem;
+}
+
+.github a:hover {
+  padding: 18px 2rem;
+}
+
+.text-center {
+  width: 99%;
+  justify-content: center;
 }
